--- a/BtLaCosta/sections/demanda.html
+++ b/BtLaCosta/sections/demanda.html
@@ -72,7 +72,9 @@
         </div>
 
         <div>
-          <p class="demandaP"><img class="demandaImg" src="../img/demanda2.jpg" alt=""> </p>
+          <p class="demandaP">
+            <img class="demandaImg" src="../img/demanda2.jpg" alt=""> 
+          </p>
         </div>
 
     </div>
