--- a/BtLaCosta/sections/contacto.html
+++ b/BtLaCosta/sections/contacto.html
@@ -37,21 +37,19 @@
             </div>
           </nav>
     </header>
-    <section>
-		<img class="contacto" src="../img/Contáctanos.png" alt="contactanos">
-	</section>
-	
-	<section>
-		<article>
+  
+    <section class="contact-section">
+   		<img class="contacto" src="../img/Contáctanos.png" alt="contactanos">
+		<article class="form-container">
 			<form action="#">
-                <label for="Nombre y apellido"></label>Nombre y apellido:
+                <label for="Nombre y apellido"></label>Nombre y apellido:<br>
 				<input type="text" name="Nombre y apellido"><br>
                 <br>
-				<label for="Email">Email:
+				<label for="Email">Email:<br>
 					<input type="text" name="Email"><br>
 				</label>
                 <br>
-                <label for="Edad"></label>Edad:
+                <label for="Edad"></label>Edad:<br>
 				<input type="number" name="Edad"><br>
                 <br>
 				<label for="Texto del mensaje"> Texto del mensaje:<br>
