--- a/BtLaCosta/sections/galeria.html
+++ b/BtLaCosta/sections/galeria.html
@@ -38,17 +38,17 @@
         </header>
         
         <section class="galeria">
-           <div class="divImg"><img class="imgGaleria" src="../img/mdacity.jpg" alt="mar de ajo"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/muelle.jpg" alt="muelle mar de ajo"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/sanbernardoplaya.jpg" alt="playa sanbernardo"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/sanbernardo2.jpg" alt="san bernardo costanera"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/stcity.jpg" alt="barco"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/posei.jpg" alt=""></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/LaLucila01.jpg" alt="laLucila"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/lucila02.jpg" alt="MuelleLucila"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/costa1.jpg" alt="lacosta"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/costa2.jpeg" alt="lacosta2"></div>
-           <div class="divImg"><img class="imgGaleria" src="../img/mar.jpeg" alt="La Costa desde arriba"></div>   
+          <img class="imgGaleria" src="../img/mdacity.jpg" alt="mar de ajo">
+          <img class="imgGaleria" src="../img/muelle.jpg" alt="muelle mar de ajo">
+          <img class="imgGaleria" src="../img/sanbernardoplaya.jpg" alt="playa sanbernardo">
+          <img class="imgGaleria" src="../img/sanbernardo2.jpg" alt="san bernardo costanera">
+          <img class="imgGaleria" src="../img/stcity.jpg" alt="barco">
+          <img class="imgGaleria" src="../img/posei.jpg" alt="">
+          <img class="imgGaleria" src="../img/LaLucila01.jpg" alt="laLucila">
+          <img class="imgGaleria" src="../img/lucila02.jpg" alt="MuelleLucila">
+          <img class="imgGaleria" src="../img/costa1.jpg" alt="lacosta">
+          <img class="imgGaleria" src="../img/costa2.jpeg" alt="lacosta2">
+          <img class="imgGaleria" src="../img/mar.jpeg" alt="La Costa desde arriba">   
         </section>
         
         <footer class="redes">
