--- a/BtLaCosta/sections/oferta.html
+++ b/BtLaCosta/sections/oferta.html
@@ -89,17 +89,21 @@
       </form>
     </div>
 
-    <div class="anuncios"></div>
+    <div class="anuncios">
       <h5>Publicaciones recientes y destacadas</h5><br>
       <div>
         <img class="publicaciones" src="../img/publi1.png" alt="publi-normal">
         <img class="publicaciones" src="../img/publi2.png" alt="publi-destacada">
         <img class="publicaciones" src="../img/publi3.png" alt="publi-normal2">
-        <p class="ofertaP">
-          SE PRIORIZAN LOS POSTULANTES QUE RESIDAN EN LA LOCALIDAD DE MAR DE AJÓ O SAN BERNARDO✅
-          Se agradece compartir la publicación. <img class="ofertaImg" src="../img/delivery.jpg" alt="delivery">
-        </p>
+        <div class="ofertaP">
+          <p class="text-oferta">
+            SE PRIORIZAN LOS POSTULANTES QUE RESIDAN EN LA LOCALIDAD DE MAR DE AJÓ O SAN BERNARDO✅
+            Se agradece compartir la publicación. 
+          </p>
+          <img class="ofertaImg" src="../img/delivery.jpg" alt="delivery">
+        </div>
         <img class="ofertaImg" src="../img/paucam.jpg" alt="publi-normal3">   
+      </div>
     </div>
 
 
